cmake_minimum_required(VERSION 3.5.0)
SET(CMAKE_CXX_STANDARD 11)

PROJECT(rrt)

# 增加PCL库的依赖
FIND_PACKAGE( PCL REQUIRED COMPONENTS common io )

# 添加头文件和库文件
ADD_DEFINITIONS( ${PCL_DEFINITIONS} )
INCLUDE_DIRECTORIES( ${PCL_INCLUDE_DIRS}  )
LINK_LIBRARIES( ${PCL_LIBRARY_DIRS} )


FIND_PACKAGE(octomap REQUIRED)
INCLUDE_DIRECTORIES( ${OCTOMAP_INCLUDE_DIRS} )
message(${OCTOMAP_LIBRARIES})

INCLUDE_DIRECTORIES(
include
)

AUX_SOURCE_DIRECTORY(src DIR_SRCS)

SET(TEST_MATH
${DIR_SRCS}
)

ADD_EXECUTABLE(${PROJECT_NAME} ${TEST_MATH})
TARGET_LINK_LIBRARIES( rrt
    ${PCL_LIBRARIES}
    ${OCTOMAP_LIBRARIES})


TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OCTOMAP_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OCTOMATH_LIBRARIES})
